--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "ldapjs": "^3.0.7",
     "mongoose": "^8.9.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/ldapjs": "^3.0.6",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.12.0",
     "nodemon": "^3.1.9",
