--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.5.0",
+    "@types/mongodb": "^4.0.6",
     "bson": "^6.10.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -20,7 +21,7 @@
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^9.0.2",
     "ldapjs": "^3.0.7",
-    "mongodb": "^6.14.2",
+    "mongodb": "^6.15.0",
     "mongoose": "^8.12.1",
     "mongoose-gridfs": "^1.3.0",
     "multer": "^1.4.5-lts.1",
@@ -39,6 +40,6 @@
     "gridfs-storage-engine": "^0.2.2",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   }
 }
