--- a/silivri_havuz/pubspec.yaml
+++ b/silivri_havuz/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   google_fonts: ^6.2.1
   intl: ^0.18.0
   file_picker: ^9.0.3
+  open_file: ^3.5.10
+  permission_handler: ^11.4.0
 
 
   flutter:
