--- a/silivri_havuz/pubspec.yaml
+++ b/silivri_havuz/pubspec.yaml
@@ -33,15 +33,15 @@ dependencies:
   get_storage: ^2.1.1
   fl_chart: ^0.69.2
   google_fonts: ^6.2.1
-  intl: ^0.18.0
   file_picker: ^9.0.3
   open_file: ^3.5.10
   path_provider:
 
-
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
